deployments/k8s-template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phone-compare
  labels:
    app: phone-compare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phone-compare
  template:
    metadata:
      labels:
        app: phone-compare
    spec:
      restartPolicy: Always
      volumes:
      - name: phone-compare-data
        persistentVolumeClaim:
          claimName: phone-compare-data
      containers:
      - name: phone-compare
        image: ${DOCKER_IMAGE}
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
            name: web
        volumeMounts:
          - mountPath: "/data"
            name: "phone-compare-data"
        startupProbe:
          httpGet:
            port: web
            path: "/api-docs/"
            scheme: "HTTP"
          initialDelaySeconds: 15
        livenessProbe:
          httpGet:
            port: web
            path: "/api-docs/"
            scheme: "HTTP"
        readinessProbe:
          httpGet:
            port: web
            path: "/api-docs/"
            scheme: "HTTP"
---
apiVersion: v1
kind: Service
metadata:
  name: phone-compare
spec:
  selector:
    app: phone-compare
  ports:
    - name: "web"
      protocol: TCP
      port: 80
      targetPort: "web"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phone-compare
spec:
  rules:
  - host: phone-compare${DOMAIN_POSTFIX}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phone-compare
            port:
              name: "web"
